# Astronomy-Weather-Station

./: .gitignore  CONTRIBUTING.md  README.md  create_sounding.py  geomet_wcs_capabilities.xml  promt.txt  rdps_wcs_coverages.txt  rdps_wms_layers.txt  rdps_wms_layers_1.txt
api/SHARPpy/: Cargo.toml  README.md  build.rs  create_sounding_gfs.py
api/SHARPpy/SHARPpy/: environment.yml
api/SHARPpy/SHARPpy/SHARPpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
api/SHARPpy/SHARPpy/sharppy/sharptab/: params.py
api/SHARPpy/src/: lib.rs  main.rs
api/aurora/: Cargo.toml
api/aurora/src/: lib.rs  main.rs
api/cleardarksky/: Cargo.toml  README.md
api/cleardarksky/src/: lib.rs  main.rs
api/clearoutside/: Cargo.toml  README.md
api/clearoutside/src/: lib.rs  main.rs
api/environment_canada/: Cargo.toml  README.md
api/environment_canada/src/: lib.rs  main.rs
api/geomet/: Cargo.toml  README.md  filtered_wcs_layers.txt  filtered_wms_layers.txt
api/geomet/src/: lib.rs  main.rs
api/meteoblue/: Cargo.toml  README.md
api/meteoblue/src/: lib.rs  main.rs
api/nina/: Cargo.toml
api/nina/src/: lib.rs  main.rs
api/openstreetmap/: Cargo.toml
api/openstreetmap/src/: lib.rs  main.rs
frontend/: Cargo.toml  build.rs
frontend/src/: main.rs
frontend/src/app/: aurora.rs  cleardarksky.rs  clearoutside.rs  cloud_cover.rs  coordinates.rs  environment_canada.rs  map.rs  meteoblue.rs  mod.rs  nina.rs  precipitation.rs  sounding.rs  utils.rs  weather.rs  wind.rs
frontend/ui/: aurora.slint  environment_canada.slint  main.slint  nina.slint  precipitation.slint  sounding.slint
material-1.0/ui/components/: text_field.slint
