[package]
name = "weather-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.6", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
geomet = { path = "../api/geomet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
slint-build = "1.6"
tokio = { version = "1.0", features = ["full"] }
geomet = { path = "../api/geomet" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.3"
