[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
chrono = "0.4"
futures = "0.3"
